--- a/fusion_transformer.ipynb
+++ b/fusion_transformer.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1uNh0HydMlsFywzjMOpvfbUC3Ph2QKmjC",
-      "authorship_tag": "ABX9TyP6gGPCK3zVLjvjaae8d9l0",
+      "authorship_tag": "ABX9TyPNEKM/QJz5pzpaKo2iCx3o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3G2CekCSGcsD",
-        "outputId": "cd40ad53-9d44-4899-9bc3-456bcd8e16a1"
+        "outputId": "8800f821-13bf-454d-e77e-b298d7f3820d"
       },
       "outputs": [
         {
@@ -50,20 +50,20 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting rasterio\n",
             "  Downloading rasterio-1.2.10-cp37-cp37m-manylinux1_x86_64.whl (19.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 19.3 MB 7.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from rasterio) (57.4.0)\n",
-            "Collecting snuggs>=1.4.1\n",
-            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
+            "\u001b[K     |████████████████████████████████| 19.3 MB 348 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from rasterio) (1.21.6)\n",
             "Collecting cligj>=0.5\n",
             "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from rasterio) (2022.6.15)\n",
             "Collecting click-plugins\n",
             "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from rasterio) (57.4.0)\n",
+            "Collecting snuggs>=1.4.1\n",
+            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
             "Collecting affine\n",
             "  Downloading affine-2.3.1-py2.py3-none-any.whl (16 kB)\n",
-            "Requirement already satisfied: attrs in /usr/local/lib/python3.7/dist-packages (from rasterio) (21.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from rasterio) (1.21.6)\n",
             "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.7/dist-packages (from rasterio) (7.1.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from rasterio) (2022.6.15)\n",
+            "Requirement already satisfied: attrs in /usr/local/lib/python3.7/dist-packages (from rasterio) (21.4.0)\n",
             "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.7/dist-packages (from snuggs>=1.4.1->rasterio) (3.0.9)\n",
             "Installing collected packages: snuggs, cligj, click-plugins, affine, rasterio\n",
             "Successfully installed affine-2.3.1 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.2.10 snuggs-1.4.7\n"
@@ -104,6 +104,18 @@
     {
       "cell_type": "code",
       "source": [
+        "!rm -rf /content/__MACOSX\n",
+        "!rm -rf /content/2013_DFTC"
+      ],
+      "metadata": {
+        "id": "Huc640OvJTgo"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!unzip \"/content/drive/MyDrive/datasets/houston/2013_DFTC.zip\""
       ],
       "metadata": {
@@ -111,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nm2MpNxHGstM",
-        "outputId": "a8ada15f-7fc2-454e-a1e0-44b88ce5b302"
+        "outputId": "0f3a6501-dde0-4630-ca13-4309849819c6"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,13 +158,36 @@
     {
       "cell_type": "code",
       "source": [
+        "!rm -rf /content/__MACOSX"
+      ],
+      "metadata": {
+        "id": "f5S_fX_GJhZp"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "ds = rasterio.open('/content/2013_DFTC/2013_IEEE_GRSS_DF_Contest_CASI.tif')"
       ],
       "metadata": {
-        "id": "k0Vr4JeVJFGH"
+        "id": "k0Vr4JeVJFGH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ced0c237-7a4f-4584-b187-1895eb5d5879"
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:rasterio._env:CPLE_AppDefined in /content/2013_DFTC/2013_IEEE_GRSS_DF_Contest_CASI.tif: TIFFReadDirectory:Sum of Photometric type-related color channels and ExtraSamples doesn't match SamplesPerPixel. Defining non-color channels as ExtraSamples.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -164,9 +199,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jn5EvfhkJI5G",
-        "outputId": "e665f96f-b5f7-4c57-cd0f-dab330b9e4be"
+        "outputId": "d20d2457-da24-4744-b20b-db9865f55e72"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +211,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ds.read(1).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H6ASv0RQJrZ_",
+        "outputId": "1226c1c1-1892-4c7b-e830-fea5384aec5c"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(349, 1905)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -197,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BD2ef3zgJKX5",
-        "outputId": "1da42a9c-dd4b-448e-f134-8b549770e5e4"
+        "outputId": "b20c9840-733e-4ec1-dc17-be2d96205f58"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,9 +703,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QvmBSrZ0tlW_",
-        "outputId": "f5d9be87-3761-4baa-cc18-c775310f3a6b"
+        "outputId": "2a74b98f-3e38-4afc-f624-2f1a013e752c"
       },
-      "execution_count": 71,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,24 +715,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 37
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "test_content = np.genfromtxt('/content/drive/MyDrive/datasets/houston/test.txt')\n",
-        "test_content.shape"
+        "test_co = np.genfromtxt('/content/drive/MyDrive/datasets/houston/test.txt')\n",
+        "test_co.shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-cftGFPtmAS",
-        "outputId": "00c478fc-62fe-42ef-d31c-f2395060d683"
+        "outputId": "066db1c5-4682-47ba-f7e9-73476afec1d7"
       },
-      "execution_count": 64,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +742,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 38
         }
       ]
     },
@@ -696,9 +757,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RJJtGyFpt15T",
-        "outputId": "758706a0-6e91-425f-84e3-a149c8bad8db"
+        "outputId": "37285e61-cf7b-4790-c540-19f4f36a62c4"
       },
-      "execution_count": 65,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,33 +776,193 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 39
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "ds.read(1).shape"
+        "import numpy as np\n",
+        "hysp=np.zeros((144,349,1905))\n",
+        "for i in range(144):\n",
+        "  x=ds.read(i+1)\n",
+        "  m=np.amax(x)\n",
+        "  x=x/m\n",
+        "  hysp[i]=x\n",
+        "print(hysp.shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NoftMuYStjsj",
-        "outputId": "f42fed20-0497-4809-b0c2-349a239ac47d"
+        "outputId": "6ba636dc-4fdc-490c-c758-2631ef83d345"
       },
-      "execution_count": 70,
+      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(349, 1905)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 70
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(144, 349, 1905)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hysp1=np.swapaxes(hysp,2,0)\n",
+        "print(hysp1.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ErVQC9DNv6Pa",
+        "outputId": "538f177c-9232-4200-8bc7-251564eb13f4"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1905, 349, 144)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hs_train = []\n",
+        "train_label = []\n",
+        "for i in train_co:\n",
+        "  hs_train.append(hysp1[int(i[0]),int(i[1])])\n",
+        "  train_label.append(i[2]-1)\n",
+        "hs_train = np.asarray(hs_train)\n",
+        "train_label = np.asarray(train_label)"
+      ],
+      "metadata": {
+        "id": "YSuDQxRkv6IB"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(hs_train.shape)\n",
+        "print(train_label.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QghwnqDlv58Z",
+        "outputId": "fdd5355d-5de3-42e3-bd89-7ef4531c46cf"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2832, 144)\n",
+            "(2832,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ds2=rasterio.open(\"/content/2013_DFTC/2013_IEEE_GRSS_DF_Contest_LiDAR.tif\")\n",
+        "print(ds2.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O1McmKeqv50Q",
+        "outputId": "ce7a9a52-d6b7-4048-96e8-cde4555c0f4b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(349, 1905)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=ds2.read(1)\n",
+        "m=np.amax(x)\n",
+        "x=x/m\n",
+        "ll=np.swapaxes(x,0,1)\n",
+        "print(ll.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9sBGAZi6v5od",
+        "outputId": "a1ba5459-1eab-4f93-d64d-07d0429141fd"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1905, 349)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p=3\n",
+        "# hs_tr=np.zeros((2832,p,p,144))\n",
+        "ld_tr=np.zeros((2832,p,p))\n",
+        "train_label_new=np.zeros(2832)\n",
+        "for i in range(2832):\n",
+        "  x=int(train_co[i][0])\n",
+        "  y=int(train_co[i][1])\n",
+        "  train_label_new[i]=int(train_co[i][2]-1)\n",
+        "  if y>=2 and y<=348 and x>=2 and x<=1904:\n",
+        "      ld_tr[i]=ll[ x-2:x+1 , y-2:y+1 ]\n",
+        "  \n",
+        "print(ld_tr.shape)\n",
+        "ld_tr=np.reshape(ld_tr,(2832,9,1))\n",
+        "print(ld_tr.shape)\n",
+        "print(train_label_new.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eLU1gGPYv5dt",
+        "outputId": "10ae91fa-94c0-4d19-a8e3-c5ea6ed92196"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2832, 3, 3)\n",
+            "(2832, 9, 1)\n",
+            "(2832,)\n"
+          ]
         }
       ]
     },
@@ -751,73 +972,7 @@
         ""
       ],
       "metadata": {
-        "id": "ErVQC9DNv6Pa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "YSuDQxRkv6IB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "QghwnqDlv58Z"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "O1McmKeqv50Q"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "9sBGAZi6v5od"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "eLU1gGPYv5dt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "pyYJ-R_Zv5Jv"
+        "id": "W9Y86oCVJoUt"
       },
       "execution_count": null,
       "outputs": []
